<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/background"
    tools:context=".LogIn">


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/login"
        android:textColor="@color/fontColorHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="40sp"/>
    <LinearLayout
        android:id="@+id/otpBox"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrOTP"
            android:textSize="18sp"
            android:padding="20dp"
            android:textColor="@color/fontColorHead"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:id="@+id/OTP"
            android:textColorHint="@color/fontColor"
            app:counterMaxLength="6"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/fontColorHead"
                android:maxLength="6"
                android:background="@drawable/text_input_shape"
                android:hint="@string/otp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:onClick="verifyOtp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:elevation="10dp"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:textColor="@color/btnTxtColor"
            android:background="@drawable/green_btn"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:textSize="18sp"
                android:text="@string/validOtpTxt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:id="@+id/timer"
                android:text="30 Sec"/>
            <TextView
                android:id="@+id/otpResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resendTxt"
                android:textColor="@color/teal_200"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/formBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColorHead"
            android:textColorHint="@color/fontColor"
            android:background="@drawable/text_input_shape"
            android:id="@+id/mobNo"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:padding="5dp"
                android:maxLength="10"
                android:imeOptions="actionNext"
                android:background="@drawable/blank"
                android:hint="@string/MobileNo"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColorHead"
            android:textColorHint="@color/fontColor"
            android:background="@drawable/text_input_shape"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:background="@drawable/blank"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/formBox"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="10dp"
        android:onClick="login"
        android:textAllCaps="false"
        android:elevation="10dp"
        android:textSize="17sp"
        android:textColor="@color/btnTxtColor"
        android:background="@drawable/green_btn" />
        <LinearLayout
            android:onClick="gotoForgotten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dontPass"
                android:gravity="end"
                android:textColor="@color/fontColor"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/retriePas"
                android:textColor="@color/colorBlue"
                android:gravity="start"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>